recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  if(levels==0){
    forward(length)
  }else{
   left(45);
   crab(levels-1,lenght*sqrt(2))
   right(90)
  }
}